# gouda-core-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  justfile
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint.yml  rust.yml
examples/gouda_sandbox/: README.md
examples/gouda_sandbox/src/: context.rs  input.rs  main.rs
examples/rust_gouda_app/: Cargo.toml  config.json
examples/rust_gouda_app/src/: actions.rs  app.rs  communication.rs  config.rs  messages.rs
gouda_core/: Cargo.toml
gouda_core/src/: client.rs  context.rs  error.rs  executor.rs  input.rs  lib.rs  multipart_response.rs  output.rs  runner.rs
gouda_core/src/test_utils/: client_mock.rs  mod.rs  writer_mock.rs
gouda_core/tests/: runner_test.rs
gouda_proto/: Cargo.toml  build.rs
gouda_proto/src/chat/: builder.rs  de.gonicus.gonnect.rs  mod.rs
gouda_sandbox/: Cargo.toml  README.md  config.json
gouda_sandbox/src/: ui.rs
protos/: chat.proto  gouda-cli.kdl
protos/.github/workflows/: proto-check.yml
