[workspace]
members = [
  "gouda_core",
  "gouda_proto",
  "examples/rust_gouda_app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
gouda_core = { path = "gouda_core" }
gouda_proto = { path = "gouda_proto" }

vergen = { version = "10.0", features = ["build", "cargo", "rustc"] }
prost = "0.14"
prost-build = "0.14"
interprocess = { version = "2.2", default-features = false, features = ["tokio"] }
clap = { version = "4.6", features = ["derive"] }
bytes = "1.11"

tokio = { version = "1.48", default-features = false, features = [
  "rt-multi-thread",
  "io-std",
  "io-util",
  "macros",
  "sync",
  "time",
] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures-util = "0.3"
async-trait = "0.1"

url = "2.5.7"

js_int = "0.2.2"
matrix-sdk = { version = "0.18.0", features = [
  "sso-login", "markdown", "bundled-sqlite"
] }
matrix-sdk-crypto = { version = "0.18.0", default-features = false }
matrix-sdk-common = { version = "0.18.0", default-features = false }
ruma-common = "0.19"

mime = "0.3"
mime_guess = "2.0"

aes-gcm = "0.10"
argon2 = "0.5"

serde = "1.0"
serde_json = "1.0"

log = "0.4"
log4rs = "1.4"

infer = "0.19"

tempdir = "0.3"
test-log = "0.2"
env_logger = "0.11"

thiserror = "2.0"

uuid = { version = "1.18", features = ["v4"] }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
