[workspace]
members = [
  "gouda_core",
  "gouda_proto",
  "gouda_sandbox",
]
resolver = "2"

[workspace.package]
version = "0.2.0"

[workspace.dependencies]
gouda_core = { path = "gouda_core" }
gouda_proto = { path = "gouda_proto" }

prost = "0.14"
prost-build = "0.14"
interprocess = { version = "2.2", default-features = false, features = ["tokio"] }

tokio = { version = "1.48", default-features = false }
tokio-util = "0.7"
async-trait = "0.1"

serde = { version = "1.0", features = ["derive"] }

log = "0.4"
env_logger = "0.11"

thiserror = "2.0"

uuid = { version = "1.18", features = ["v4"] }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
