[package]
name = "rust_gouda_app"
edition = "2024"
version.workspace = true

[dependencies]
gouda_proto.workspace = true

egui = "0.34"
eframe = { version = "0.34", default-features = false, features = ["persistence", "glow", "wayland", "x11"] }
egui-toast = "0.20"

clap.workspace = true
interprocess.workspace = true
prost.workspace = true
strum = "0.27.2"
strum_macros = "0.27.2"
serde = { workspace = true, features = ["derive"]}
serde_json.workspace = true

[package.metadata.cargo-machete]
ignored = ["strum"]
