[package]
name = "rust_gouda_app"
edition = "2024"
version.workspace = true

[dependencies]
gouda_proto.workspace = true

interprocess.workspace = true
prost.workspace = true
serde = { workspace = true, features = ["derive"]}

serde_json = "1.0"

egui = "0.34"
eframe = { version = "0.34", default-features = false, features = ["persistence", "glow", "wayland", "x11"] }
egui-toast = "0.20"

clap = { version = "4.6", features = ["derive"] }

strum = "0.27.2"
strum_macros = "0.27.2"

[package.metadata.cargo-machete]
ignored = ["strum"]
